# AI-Systems-Portfolio

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: check-collaborators.yml  ci-cd.yml
RAG_system_project/: .gitignore  README.md  docker-compose.yml  pyproject.toml
RAG_system_project/llm_engineering/application/dataset/: utils.py
RAG_system_project/pipelines/: finetune_clip_pipeline.py  video_etl_pipeline.py  video_retrieval_stream_2.py
RAG_system_project/tools/: inspect_webdataset.py
ai_pipelines/: README.md
ai_pipelines/computer_vision_anomaly_detection/: README.md  anomaly_detection_MVTecAD.ipynb
ai_pipelines/object_detection_and_tracking/: README.md  detections.csv  object_detection_demo.ipynb
ai_pipelines/object_detection_and_tracking/dvclive/: metrics.json  params.yaml
ai_pipelines/object_detection_and_tracking/dvclive/artifacts/: best.pt.dvc
ai_pipelines/object_detection_and_tracking/dvclive/plots/: images.dvc
ai_pipelines/object_detection_and_tracking/dvclive/plots/metrics/lr/: pg0.tsv  pg1.tsv  pg2.tsv
ai_pipelines/object_detection_and_tracking/dvclive/plots/metrics/metrics/: mAP50(B).tsv  mAP50-95(B).tsv  precision(B).tsv  recall(B).tsv
ai_pipelines/object_detection_and_tracking/dvclive/plots/metrics/train/: box_loss.tsv  cls_loss.tsv  dfl_loss.tsv
ai_pipelines/object_detection_and_tracking/dvclive/plots/metrics/val/: box_loss.tsv  cls_loss.tsv  dfl_loss.tsv
ai_pipelines/pddl_llm_routing_agent/: README.md  plan.out
ai_pipelines/statistical_learning_frameworks/: MLE_Linear-Regression_and_SGD_Demos.ipynb  README.md
assignments/assignment-1/: 01-assignment-1.ipynb  README.md
assignments/assignment-2/: 02-assignment-2.ipynb  README.md
assignments/assignment-3/: 03-assignment-3.ipynb  VisDrone.yaml
assignments/assignment-4/: README.md  domain.pddl  problem.pddl  problem.pddl.plan
docker/: Dockerfile.dev.gpu
project/: README.md
project/llm_engineering/: __init__.py  settings.py
project/llm_engineering/application/: __init__.py
project/llm_engineering/application/dataset/: __init__.py
project/llm_engineering/domain/: __init__.py  types.py
project/pipelines/: __init__.py  finetune_clip_pipeline.py  gradio_app.py  video_etl_pipeline.py  video_featurize_pipeline.py  video_retrieval_stream.py
project/tools/: download_webdataset_mp4s.py  inspect_webdataset.py
